--- a/src/components/capa/styles.module.css
+++ b/src/components/capa/styles.module.css
@@ -6,51 +6,181 @@
     background-color: white; /* Define a cor de fundo como branca */
     height: 100vh; /* Define a altura do container para centralização vertical */
     gap: 0px; /* Adiciona um espaço entre os itens do grid */
+}
 
+.image {
+    width: 50%; /* Define a largura da imagem para ocupar 50% da largura do container */
+}
+
+.description h1 {
+    font-family: 'Bungee', sans-serif;
+    font-size: 40px;
+}
+
+.capaimg {
+    width: 100%; /* Define a largura da imagem para ocupar 50% da largura do container */
+    margin: 50px auto; /* Centraliza a imagem horizontalmente */
+}
+
+.readButton {
+    background-color: #91710a; /* Cor de fundo verde */
+    border: none;
+    color: white;
+    padding: 15px 62px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 40px;
+    cursor: pointer;
+    border-radius: 8px;
+}
+
+.readButton:hover {
+    background-color: #4b3e15;
+    color: #ffffff;
+}
+
+.readButton:active {
+    background-color: #695309; /* Cor quando o botão é clicado */
+    color: #ffffff;
+}
+
+.thanks h1 {
+    font-family: 'Bungee', sans-serif;
+    font-size: 17px;
+    text-align: center;
+    text-decoration: none;
+    margin-left: 40px;
+}
+
+/* Media Query para telas com largura máxima de 768px */
+@media (max-width: 768px) {
     .image {
-        width: 50%; /* Define a largura da imagem para ocupar 42% da largura do container */
+        width: 100%; /* Ajusta a largura da imagem para 80% da largura do container */
     }
 
-    .description h1{
+    .capaimg {
+        width: 100%; /* Define a largura da imagem para ocupar 50% da largura do container */
+        margin: 50px auto; /* Centraliza a imagem horizontalmente */
+    }
+}
+
+/*============================================================================== 
+    iPhone 4 and 4S || 320 x 480 || Default, Portrait and Landscape
+================================================================================ */
+
+@media only screen and (min-width: 320px) 
+and (max-width: 480px){
+    .image {
+        width: 100%; /* Ajusta a largura da imagem para 80% da largura do container */
+    }
+
+    .description h1 {
         font-family: 'Bungee', sans-serif;
-        font-size: 40px;
+        font-size: 20px;
     }
 
-    .capaimg{
-        width: 50%; /* Define a largura da imagem para ocupar 42% da largura do container */
-        margin: 50px;
-        margin-left: 430px;   
+    .capaimg {
+        width: 100%; /* Define a largura da imagem para ocupar 50% da largura do container */
+        margin: 50px auto; /* Centraliza a imagem horizontalmente */
     }
 
     .readButton {
         background-color: #91710a; /* Cor de fundo verde */
         border: none;
         color: white;
-        padding: 15px 62px;
+        padding: 15px 42px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        font-size: 16px;
-        margin-left: 40px;
+        font-size: 13px;
+        margin: 20px auto;
         cursor: pointer;
         border-radius: 8px;
     }
 
-    .readButton:hover{
-        background-color: #4b3e15;
-        color:#ffffff;
-    }
-
-    .readButton:active {
-        background-color: #695309; /* Cor quando o botão é clicado */
-        color: #ffffff;
-    }
-
-    .thanks h1{
+    .thanks h1 {
         font-family: 'Bungee', sans-serif;
-        font-size: 17px;
+        font-size: 12px;
         text-align: center;
         text-decoration: none;
-        margin-left: 40px;
+        margin: 20px auto;
+    }
+}
+
+@media (max-width: 360px) {
+    .image {
+        width: 100%; /* Ajusta a largura da imagem para 80% da largura do container */
+    }
+
+    .description h1 {
+        font-family: 'Bungee', sans-serif;
+        font-size: 20px;
+    }
+
+    .capaimg {
+        width: 100%; /* Define a largura da imagem para ocupar 50% da largura do container */
+        margin: 50px auto; /* Centraliza a imagem horizontalmente */
+    }
+
+    .readButton {
+        background-color: #91710a; /* Cor de fundo verde */
+        border: none;
+        color: white;
+        padding: 15px 42px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 13px;
+        margin: 20px auto;
+        cursor: pointer;
+        border-radius: 8px;
+    }
+
+    .thanks h1 {
+        font-family: 'Bungee', sans-serif;
+        font-size: 12px;
+        text-align: center;
+        text-decoration: none;
+        margin: 20px auto;
+    }
+}
+
+@media (max-width: 320px) {
+    .image {
+        width: 100%; /* Ajusta a largura da imagem para 80% da largura do container */
+    }
+
+    .description h1 {
+        font-family: 'Bungee', sans-serif;
+        font-size: 20px;
+    }
+
+    .capaimg {
+        width: 100%; /* Define a largura da imagem para ocupar 50% da largura do container */
+        margin: 50px auto; /* Centraliza a imagem horizontalmente */
+    }
+
+    .readButton {
+        background-color: #91710a; /* Cor de fundo verde */
+        border: none;
+        color: white;
+        padding: 15px 42px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 13px;
+        margin: 20px auto;
+        cursor: pointer;
+        border-radius: 8px;
+    }
+
+    .thanks h1 {
+        font-family: 'Bungee', sans-serif;
+        font-size: 12px;
+        text-align: center;
+        text-decoration: none;
+        margin: 20px auto;
     }
 }
