--- a/src/components/pagina/styles.module.css
+++ b/src/components/pagina/styles.module.css
@@ -89,3 +89,146 @@
     text-decoration: none;
     margin-left: 1px;
 }
+
+@media (max-width: 768px){
+    .image {
+        width: 100%;
+    }    
+}
+
+/*============================================================================== 
+    iPhone 4 and 4S || 320 x 480 || Default, Portrait and Landscape
+================================================================================ */
+
+@media only screen and (min-width: 320px) 
+and (max-width: 480px){
+    .image {
+        width: 100%; /* Ajusta a largura da imagem para 80% da largura do container */
+    }
+
+    .description h1 {
+        font-family: 'Bungee', sans-serif;
+        font-size: 20px;
+    }
+
+    .capaimg {
+        width: 100%; /* Define a largura da imagem para ocupar 50% da largura do container */
+        margin: 50px auto; /* Centraliza a imagem horizontalmente */
+    }
+
+    .buttonStart {
+        background-color: #91710a;
+        border: none;
+        color: white;
+        padding: 15px 12px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        cursor: pointer;
+        border-radius: 8px;
+        position: absolute; /* Posição absoluta para centralização */
+        left: 50%; /* Posiciona no meio do contêiner */
+        transform: translateX(-50%); /* Centraliza horizontalmente */
+    }
+    
+    .buttonBack {
+        background-color: #91710a;
+        border: none;
+        color: white;
+        padding: 15px 12px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 12px;
+        cursor: pointer;
+        border-radius: 8px;
+        margin-right: auto;
+    }
+
+    .readButton {
+        background-color: #91710a; /* Cor de fundo verde */
+        border: none;
+        color: white;
+        padding: 15px 12px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 12px;
+        margin-left: 190px;
+        cursor: pointer;
+        border-radius: 8px;
+    }
+
+    .thanks h1 {
+        font-family: 'Bungee', sans-serif;
+        font-size: 12px;
+        text-align: center;
+        text-decoration: none;
+        margin: 20px auto;
+    }
+}
+
+@media (max-width: 320px) {
+    .image {
+        width: 100%; /* Ajusta a largura da imagem para 80% da largura do container */
+    }
+
+    .description h1 {
+        font-family: 'Bungee', sans-serif;
+        font-size: 20px;
+    }
+
+    .capaimg {
+        width: 100%; /* Define a largura da imagem para ocupar 50% da largura do container */
+        margin: 50px auto; /* Centraliza a imagem horizontalmente */
+    }
+
+    .buttonStart {
+        background-color: #91710a;
+        border: none;
+        color: white;
+        padding: 15px 12px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        cursor: pointer;
+        border-radius: 8px;
+        position: absolute; /* Posição absoluta para centralização */
+        left: 50%; /* Posiciona no meio do contêiner */
+        transform: translateX(-50%); /* Centraliza horizontalmente */
+    }
+    
+    .buttonBack {
+        background-color: #91710a;
+        border: none;
+        color: white;
+        padding: 15px 12px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 12px;
+        cursor: pointer;
+        border-radius: 8px;
+        margin-right: auto;
+    }
+
+    .readButton {
+        background-color: #91710a; /* Cor de fundo verde */
+        border: none;
+        color: white;
+        padding: 15px 12px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 12px;
+        margin-left: 190px;
+        cursor: pointer;
+        border-radius: 8px;
+    }
+
+    .thanks h1 {
+        font-family: 'Bungee', sans-serif;
+        font-size: 12px;
+        text-align: center;
+        text-decoration: none;
+        margin: 20px auto;
+    }
+}
